<resources>
    <string name="app_name">Medical Center</string>
    <string name="medica">Medica</string>
    <string name="img">img</string>
    <string name="ddd">img</string>
    <string name="text1"><![CDATA[Thousands of doctors & experts to help your health!]]></string>
    <string name="next">Next</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="email">   Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="text2"><![CDATA[The best online doctor appointment &\n consultation app of the century for your\n health and medical needs!]]></string>
</resources>